work/63/Chain_Java/compile_stderr.txt
HelloWorldApp.java:1: error: package foo does not exist
import foo.Bar;
          ^
1 error
